<resources>
    <string name="app_name">BeHonest</string>
    <string name="Truth_Dare">Truth/Dare</string>
    <string name="yes_no">Yes/No</string>
    <string name="tagLine">A <b><font color="#021a1c">Truth/Dare</font></b> Game</string>
    <string name="play">PLAY!</string>
    <string name="score_limit">Score Limit:</string>
    <string name="name_2">name_2</string>
    <string name="player2">Player 2:</string>
    <string name="name_1">name_1</string>
    <string name="player1">Player 1:</string>
    <string name="beHonest"><b>Be<font color="#021a1c">Honest</font></b></string>
    <string name="turn">\'s turn</string>
    <string name="beHonest2"><b>BeHonest</b></string>
    <string name="scoreRange">10&#8211;99</string>
    <string name="beHonestHead">Be<b>Honest</b></string>
    <string name="done">DONE</string>
    <string name="notSay">I\'d Rather Not Say</string>
    <string name="exit">EXIT</string>
    <string name="reset">Reset</string>
    <string name="limitReachedDialog">Score Limit Reached</string>
    <string name="kids">Kids</string>
    <string name="qType">Question Types:</string>
    <string name="teen">Teens</string>
    <string name="adults">Adults</string>
    <string name="custom">Custom</string>
    <string name="scoreRange2">1&#8211;100</string>
    <string name="next">NEXT</string>
    <string name="settings">Settings</string>
    <string name="add_players">Add Players:</string>
    <string name="player_name">player_name</string>
    <string name="add">ADD</string>
    <string name="remove">Remove Last Name</string>
    <string name="truth">Truth</string>
    <string name="dare">Dare</string>
    <string name="forfeit">Forfeit</string>
    <string name="completed">Completed</string>
    <string name="view_score">View Scores</string>
    <string name="names">Names</string>
    <string name="scores">Scores</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="score_board">Score Board</string>
    <string name="pref">Preferences</string>
    <string name="play_caps">PLAY</string>
    <string name="choose">Choose</string>
    <string name="options">OPTIONS</string>
</resources>
