<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.theboringman.behonest.TruthDareSettingsActivity">

    <TextView
        android:id="@+id/Truth_DareHead"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:textStyle="bold"
        android:background="@color/textViewHead"
        android:gravity="center"
        android:text="@string/Truth_Dare"
        android:textColor="#FFF"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Truth_DareHead"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/background"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/qType"
        android:layout_width="185dp"
        android:layout_height="39dp"
        android:layout_below="@+id/settings"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:gravity="bottom"
        android:text="@string/qType"
        android:textColor="#021a1c"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/qTypeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/qType"
        android:layout_below="@id/settings"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp">
        <CheckBox
            android:id="@+id/kids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kids"
            android:textColor="#00BFA5"
            android:textSize="24sp" />
        <CheckBox
            android:id="@+id/teen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teen"
            android:textSize="24sp"
            android:textColor="#00BFA5"
            android:layout_marginTop="8dp"/>
        <CheckBox
            android:id="@+id/adults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adults"
            android:textColor="#00BFA5"
            android:textSize="24sp"
            android:layout_marginTop="8dp"/>
        <CheckBox
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:textColor="#00BFA5"
            android:textSize="24sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/scoreLimitTD"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_below="@+id/qTypeCheck"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:gravity="bottom"
        android:text="@string/score_limit"
        android:textColor="#021a1c"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/scoreLimiterTD"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_below="@+id/qTypeCheck"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/scoreLimitTD"
        android:backgroundTint="#021a1c"
        android:gravity="bottom"
        android:hint="@string/scoreRange2"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="#00BFA5"
        android:textColorHint="#757575"
        android:textSize="24sp" />


    <Button
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@+id/scoreLimiterTD"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/circle_button"
        android:foreground="@drawable/ripple"
        android:onClick="onClickNext"
        android:text="@string/next"
        android:textColor="@drawable/text_color"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/beHonest"
        android:textColor="#000"
        android:textSize="20sp" />

</RelativeLayout>
