<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.theboringman.behonest.CasualSettingsActivity">

    <TextView
        android:id="@+id/casualHead"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:background="@color/textViewHead"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/yes_no"
        android:textColor="#FFF"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/casualHead"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/background"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/p1"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_below="@+id/settings"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:gravity="bottom"
        android:text="@string/player1"
        android:textColor="#021a1c"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_below="@+id/settings"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="56dp"
        android:layout_toRightOf="@+id/p1"
        android:backgroundTint="#021a1c"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:gravity="bottom"
        android:hint="@string/name_1"
        android:inputType="text"
        android:maxLength="16"
        android:textColor="#00BFA5"
        android:textColorHint="#757575"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/p2"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_below="@+id/p1"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:gravity="bottom"
        android:text="@string/player2"
        android:textColor="#021a1c"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_below="@+id/name1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/p2"
        android:backgroundTint="#021a1c"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:gravity="bottom"
        android:hint="@string/name_2"
        android:inputType="text"
        android:maxLength="16"
        android:textColor="#00BFA5"
        android:textColorHint="#757575"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/scoreLimit"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_below="@+id/p2"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:gravity="bottom"
        android:text="@string/score_limit"
        android:textColor="#021a1c"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/scoreLimiter"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_below="@+id/name2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/scoreLimit"
        android:backgroundTint="#021a1c"
        android:gravity="bottom"
        android:hint="@string/scoreRange"
        android:inputType="number"
        android:maxLength="2"
        android:textColor="#00BFA5"
        android:textColorHint="#757575"
        android:textSize="24sp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_below="@+id/scoreLimiter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/circle_button"
        android:foreground="@drawable/ripple"
        android:onClick="onClickPlay"
        android:text="@string/play"
        android:textColor="@drawable/text_color"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/beHonest"
        android:textColor="#000"
        android:textSize="20sp" />

</RelativeLayout>
