<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/truth_dare_select"
    tools:context="com.theboringman.behonest.TruthDareSelectActivity">

    <TextView
        android:id="@+id/Truth_DareHead"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:paddingTop="24dp"
        android:background="@color/textViewHead"
        android:gravity="center"
        android:elevation="8dp"
        android:textStyle="bold"
        android:text="@string/choose"
        android:textColor="#FFF"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Truth_DareHead"
        android:textColor="#00BFA5"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:textSize="32sp" />

    <Button
        android:id="@+id/truth"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/playerName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_button"
        android:foreground="@drawable/ripple"
        android:onClick="onClickTruth"
        android:text="@string/truth"
        android:textColor="@drawable/text_color"
        android:textSize="40sp" />

    <Button
        android:id="@+id/dare"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_below="@+id/truth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_button"
        android:foreground="@drawable/ripple"
        android:onClick="onClickDare"
        android:text="@string/dare"
        android:textColor="@drawable/text_color"
        android:textSize="40sp" />


    <Button
        android:id="@+id/exits"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/rect_button"
        android:foreground="@drawable/ripple_rect"
        android:onClick="onClickExit"
        android:text="@string/exit"
        android:textColor="@drawable/text_color"
        android:layout_alignParentBottom="true"
        android:textSize="22sp" />
    <Button
        android:id="@+id/viewScores"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/rect_button"
        android:foreground="@drawable/ripple_rect"
        android:onClick="onClickViewScores"
        android:text="@string/view_score"
        android:textColor="@drawable/text_color"
        android:layout_alignParentBottom="true"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/viewScores"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/beHonest"
        android:textColor="#000"
        android:textSize="20sp" />


</RelativeLayout>
