<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#212121">

    <TextView
        android:id="@+id/scores"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:textSize="29sp"
        android:layout_gravity="top"
        android:elevation="8dp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/score_board"
        android:background="@color/textViewHead"/>
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:stretchColumns="0,1"
        android:layout_height="252dp"
        android:layout_below="@+id/scores"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/names"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:textSize="29sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/scores"
                android:gravity="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="29sp" />
        </TableRow>
        <TableRow>
            <ListView
                android:id="@+id/Scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="22sp"
                android:textColor="#FFF"
                android:layout_span="2"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/beHonest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/table"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/beHonest2"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />
    <Button
        android:id="@+id/back"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_button"
        android:foreground="@drawable/ripple_rect"
        android:textColor="@drawable/text_color"
        android:text="@string/back"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/beHonest"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        />

</RelativeLayout>