<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#212121">

    <TextView
        android:id="@+id/truthOrDare"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:textSize="29sp"
        android:layout_gravity="top"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:background="@color/textViewHead"/>
    <TextView
        android:id="@+id/textDisp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="22sp"
        android:textColor="#FFF"
        android:layout_below="@+id/truthOrDare"/>
    <TextView
        android:id="@+id/beHonest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDisp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/beHonest2"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />
    <Button
        android:id="@+id/forfeit"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_button"
        android:foreground="@drawable/ripple_rect"
        android:textColor="@drawable/text_color"
        android:text="@string/forfeit"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/beHonest"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        />
    <Button
        android:id="@+id/completed"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/rect_button"
        android:foreground="@drawable/ripple_rect"
        android:textColor="@drawable/text_color"
        android:text="@string/completed"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/beHonest"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        />

</RelativeLayout>